actually fixed overflow-elements not proportional in local testing

--- a/application.css
+++ b/application.css
@@ -516,7 +516,7 @@ body {
 }
 
 .inner-container {
-  padding: 40px 20px 70px;
+  padding: 30px 20px 30px;
 }
 
 @media only screen and (max-width: 40rem) {
